--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "npm run test -- --watch",
     "coverage": "npm run test -- --coverage",
     "coverage:collect": "npm run coverage",
-    "precommit": "npm run test:coverage && npm run build",
+    "precommit": "npm run coverage && npm run build",
     "prepublish": "npm run precommit"
   },
   "files": [
@@ -32,7 +32,9 @@
     "boilerplate",
     "browser",
     "node",
-    "starter"
+    "starter",
+    "consoless-transport",
+    "consoless"
   ],
   "dependencies": {
     "@consoless/core": "^0.0.1"
